--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,13 @@ board_build.mcu = esp32c3
 ; change WiFi firmware
 board_build.variant = esp32c3
 
+upload_speed = 921600
+
 monitor_speed = 115200
+
+monitor_filters = 
+	default
+	esp32_exception_decoder
 
 board_build.f_cpu = 80000000L
 
