--- a/platformio.ini
+++ b/platformio.ini
@@ -41,4 +41,5 @@ build_flags =
     -D CONFIG_PM_USE_RTC
     -D CONFIG_PM_LIGHTSLEEP_RTC_OSC_CAL_INTERVAL=8
     -D FIXED_POINT=16
+    -D CONFIG_I2S_SUPPRESS_DEPRECATE_WARN
 
