more power research

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,12 @@ board_build.f_cpu = 80000000L
 build_flags = 
     -D CONFIG_PM_ENABLE
     -D CONFIG_PM_USE_RTC
+    -D CONFIG_PM_POWER_DOWN_CPU_IN_LIGHT_SLEEP
     -D CONFIG_PM_LIGHTSLEEP_RTC_OSC_CAL_INTERVAL=8
     -D FIXED_POINT=16
     -D CONFIG_I2S_SUPPRESS_DEPRECATE_WARN
+    -D CONFIG_PM_RTOS_IDLE_OPT
+    -D CONFIG_PM_SLP_IRAM_OPT
+    -D CONFIG_ESP_PHY_ENABLE_USB
+    -D CONFIG_PM_DFS_INIT_AUTO
 
