--- a/platformio.ini
+++ b/platformio.ini
@@ -34,9 +34,10 @@ monitor_filters =
 	default
 	esp32_exception_decoder
 
-; board_build.f_cpu = 80000000L
+board_build.f_cpu = 80000000L
 
 build_flags = 
+    -D CORE_DEBUG_LEVEL=5
     -D CONFIG_PM_ENABLE
     -D CONFIG_PM_USE_RTC
     -D CONFIG_PM_POWER_DOWN_CPU_IN_LIGHT_SLEEP
@@ -47,4 +48,6 @@ build_flags =
     -D CONFIG_PM_SLP_IRAM_OPT=1
     -D CONFIG_ESP_PHY_ENABLE_USB=1
     -D CONFIG_PM_DFS_INIT_AUTO=1
+    -D CONFIG_FREETOS_USE_TICKLESS_IDLE
+    -D CONFIG_PM_USE_RTC_TIMER_REF
 
