--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,16 @@
     "."
   ],
   "python.defaultInterpreterPath": "venv/bin/python",
+  "terminal.integrated.defaultProfile.windows": "cmd.exe",
   "terminal.integrated.profiles.windows": {
-    "bash": {
-      "path": "C:\\Program Files\\Git\\bin\\bash.exe",
-      "args": []
-    }
+      "bash": {
+          "path": "C:\\Program Files\\Git\\bin\\bash.exe"
+      },
+      "cmd.exe": {
+          "path": "C:\\Windows\\System32\\cmd.exe",
+      }
   },
-  "terminal.integrated.defaultProfile.windows": "bash",
+  "terminal.integrated.defaultProfile.windows": "cmd.exe",
   "python.linting.pylintEnabled": true,
   "files.eol": "\n",
   "editor.tabSize": 2,
@@ -24,7 +27,16 @@
     "chrono": "cpp",
     "cmath": "cpp",
     "ostream": "cpp",
-    "_kiss_fft_guts.h": "c"
+    "_kiss_fft_guts.h": "c",
+    "array": "cpp",
+    "deque": "cpp",
+    "string": "cpp",
+    "unordered_map": "cpp",
+    "unordered_set": "cpp",
+    "vector": "cpp",
+    "string_view": "cpp",
+    "initializer_list": "cpp",
+    "span": "cpp"
   },
   "python.analysis.extraPaths": [
     "."
