--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32c3]
-platform = espressif32@^6.3.2
+platform = https://github.com/sgryphon/platform-espressif32.git#sgryphon/add-esp32-arduino-libs
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
 board = seeed_xiao_esp32c3
 framework = arduino
 
@@ -34,8 +37,17 @@ monitor_filters =
 board_build.f_cpu = 80000000L
 
 build_flags = 
+    -D CORE_DEBUG_LEVEL=5
     -D CONFIG_PM_ENABLE
     -D CONFIG_PM_USE_RTC
+    -D CONFIG_PM_POWER_DOWN_CPU_IN_LIGHT_SLEEP
     -D CONFIG_PM_LIGHTSLEEP_RTC_OSC_CAL_INTERVAL=8
     -D FIXED_POINT=16
+    -D CONFIG_I2S_SUPPRESS_DEPRECATE_WARN=1
+    -D CONFIG_PM_RTOS_IDLE_OPT=1
+    -D CONFIG_PM_SLP_IRAM_OPT=1
+    -D CONFIG_ESP_PHY_ENABLE_USB=1
+    -D CONFIG_PM_DFS_INIT_AUTO=1
+    -D CONFIG_FREETOS_USE_TICKLESS_IDLE
+    -D CONFIG_PM_USE_RTC_TIMER_REF
 
