--- a/platformio.ini
+++ b/platformio.ini
@@ -27,8 +27,7 @@ board_build.mcu = esp32c3
 board_build.variant = esp32c3
 
 upload_speed = 921600
-
-monitor_speed = 115200
+monitor_speed = 460800
 
 monitor_filters = 
 	default
@@ -50,4 +49,7 @@ build_flags =
     -D CONFIG_PM_DFS_INIT_AUTO=1
     -D CONFIG_FREETOS_USE_TICKLESS_IDLE
     -D CONFIG_PM_USE_RTC_TIMER_REF
+    -DARDUINO_USB_MODE=1 
+    -DDARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_ESP32C3_DEV=1
 
