--- a/platformio.ini
+++ b/platformio.ini
@@ -50,6 +50,7 @@ build_flags =
     -D CONFIG_PM_DFS_INIT_AUTO=1
     -D CONFIG_FREETOS_USE_TICKLESS_IDLE
     -D CONFIG_PM_USE_RTC_TIMER_REF
+    -D CONFIG_I2S_ISR_IRAM_SAFE=1
     ;-DARDUINO_USB_MODE=1 
     ;-DARDUINO_ESP32C3_DEV=1
 
