--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,8 @@ monitor_filters =
 
 board_build.f_cpu = 80000000L
 
+update_protocol = sam-ba
+
 build_flags = 
     -D CORE_DEBUG_LEVEL=5
     -D CONFIG_PM_ENABLE
