--- a/platformio.ini
+++ b/platformio.ini
@@ -36,23 +36,22 @@ monitor_filters =
 
 board_build.f_cpu = 80000000L
 
-update_protocol = sam-ba
-
 build_flags = 
-    -D CORE_DEBUG_LEVEL=5
+    ;-D CORE_DEBUG_LEVEL=5
     -D CONFIG_PM_ENABLE
-    -D CONFIG_PM_USE_RTC
-    -D CONFIG_PM_POWER_DOWN_CPU_IN_LIGHT_SLEEP
-    -D CONFIG_PM_LIGHTSLEEP_RTC_OSC_CAL_INTERVAL=8
+    ;-D CONFIG_PM_USE_RTC
+    ;-D CONFIG_PM_POWER_DOWN_CPU_IN_LIGHT_SLEEP
+    ;-D CONFIG_PM_LIGHTSLEEP_RTC_OSC_CAL_INTERVAL=8
     -D FIXED_POINT=16
     -D CONFIG_I2S_SUPPRESS_DEPRECATE_WARN=1
-    -D CONFIG_PM_RTOS_IDLE_OPT=1
-    -D CONFIG_PM_SLP_IRAM_OPT=1
-    -D CONFIG_ESP_PHY_ENABLE_USB=1
-    -D CONFIG_PM_DFS_INIT_AUTO=1
-    -D CONFIG_FREETOS_USE_TICKLESS_IDLE
-    -D CONFIG_PM_USE_RTC_TIMER_REF
+    ;-D CONFIG_PM_RTOS_IDLE_OPT=1
+    ;-D CONFIG_PM_SLP_IRAM_OPT=1
+    ;;-D CONFIG_ESP_PHY_ENABLE_USB=1
+    ;-D CONFIG_PM_DFS_INIT_AUTO=1
+    ;-D CONFIG_FREETOS_USE_TICKLESS_IDLE
+    ;-D CONFIG_PM_USE_RTC_TIMER_REF
     -D CONFIG_I2S_ISR_IRAM_SAFE=1
+    -D CONFIG_LEDC_CTRL_FUNC_IN_IRAM 
     ;-DARDUINO_USB_MODE=1 
     ;-DARDUINO_ESP32C3_DEV=1
 
