--- a/platformio.ini
+++ b/platformio.ini
@@ -50,8 +50,10 @@ build_flags =
     ;-D CONFIG_PM_DFS_INIT_AUTO=1
     ;-D CONFIG_FREETOS_USE_TICKLESS_IDLE
     ;-D CONFIG_PM_USE_RTC_TIMER_REF
+    ;-D PM_POWER_DOWN_CPU_IN_LIGHT_SLEEP=0
     -D CONFIG_I2S_ISR_IRAM_SAFE=1
     -D CONFIG_LEDC_CTRL_FUNC_IN_IRAM 
     ;-DARDUINO_USB_MODE=1 
     ;-DARDUINO_ESP32C3_DEV=1
+    -D PM_SLP_DISABLE_GPIO
 
