--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,15 @@ platform = espressif32@^6.3.2
 board = seeed_xiao_esp32c3
 framework = arduino
 
+;[env:esp32c3]
+;platform = https://github.com/sgryphon/platform-espressif32.git#sgryphon/add-esp32-arduino-libs
+;platform_packages =
+;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+;    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+;board = seeed_xiao_esp32c3
+;framework = arduino
+
+
 ; change microcontroller
 board_build.mcu = esp32c3
 ;upload_speed = 115200
