--- a/platformio.ini
+++ b/platformio.ini
@@ -40,7 +40,7 @@ monitor_filters =
 	default
 	esp32_exception_decoder
 
-;board_build.f_cpu = 80000000L
+board_build.f_cpu = 80000000L
 
 build_flags = 
     ;-D CORE_DEBUG_LEVEL=5
