--- a/platformio.ini
+++ b/platformio.ini
@@ -8,18 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32c3]
-platform = espressif32@^6.3.2
-board = seeed_xiao_esp32c3
-framework = arduino
-
 ;[env:esp32c3]
-;platform = https://github.com/sgryphon/platform-espressif32.git#sgryphon/add-esp32-arduino-libs
-;platform_packages =
-;    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
-;    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+;platform = espressif32@^6.3.2
 ;board = seeed_xiao_esp32c3
 ;framework = arduino
+
+[env:esp32c3]
+platform = https://github.com/sgryphon/platform-espressif32.git#sgryphon/add-esp32-arduino-libs
+platform_packages =
+    platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#master
+    platformio/framework-arduinoespressif32-libs @ https://github.com/espressif/esp32-arduino-libs.git#idf-release/v5.1
+board = seeed_xiao_esp32c3
+framework = arduino
 
 
 ; change microcontroller
